# Data_structures_and_algorithms_CPP

./: README.md
Linked-List/: a.out  reverse_1.cpp
dynamic_array/: CMakeLists.txt  main.cpp
